# copilot-box

./: .gitignore  README.md  pyproject.toml
.github/workflows/: android.yml  broker.yml  docs.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/github/richarddzh/copilotbox/: BlobSasClient.kt  BrokerClient.kt  CopilotBoxModels.kt  CopilotBoxRepository.kt  MainActivity.kt  MsalTokenProvider.kt  SimpleItemSelectedListener.kt
android/app/src/main/res/raw/: auth_config_single_account.json
android/app/src/main/res/values/: strings.xml  styles.xml
android/gradle/: libs.versions.toml
android/scripts/: build-debug.ps1  create-emulator.ps1  install-debug.ps1  setup-cli.ps1  start-emulator.ps1
broker/: requirements.txt  startup.sh
broker/copilot_box_broker/: __init__.py  auth.py  config.py  main.py
config/: copilot-box.example.toml
docs/: android.md  broker.md  conf.py  design.md  index.md  usage.md
scripts/: install-service.ps1  uninstall-service.ps1
src/copilot_box/: __init__.py  __main__.py  agent.py  blob_storage.py  cli.py  config.py  request_store.py  requests.py  sessions.py  ws_worker.py
tests/: test_agent_service.py  test_broker.py  test_sessions.py  test_storage_requests.py
