[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "copilot-box"
version = "0.1.0"
description = "A Windows-service-ready CLI agent bridge powered by GitHub Copilot SDK."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Copilot Box Maintainers" }
]
dependencies = [
  "github-copilot-sdk>=1.0.5,<2",
  "azure-identity>=1.17",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "websockets>=12"
]

[project.optional-dependencies]
service = [
  "pywin32>=306; platform_system == 'Windows'"
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5"
]
docs = [
  "myst-parser>=4.0",
  "sphinx>=8.1",
  "sphinx-rtd-theme>=3.0"
]
broker = [
  "fastapi>=0.115",
  "PyJWT[crypto]>=2.8",
  "uvicorn[standard]>=0.30"
]

[project.scripts]
copilot-box = "copilot_box.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_box", "broker/copilot_box_broker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
